--- a/app/views/issue/list.scala.html
+++ b/app/views/issue/list.scala.html
@@ -22,6 +22,7 @@
 
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery.pageslide.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/service/yona.twoColumnMode.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/service/yona.showSubtask.js")"></script>
 <script type="text/javascript">
   $(function(){
     // issue.List
