--- a/app/views/issue/my_list.scala.html
+++ b/app/views/issue/my_list.scala.html
@@ -21,6 +21,7 @@ models.support.SearchCondition, project:Project)
     </div>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery.pageslide.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/service/yona.twoColumnMode.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/service/yona.showSubtask.js")"></script>
     <script type="text/javascript">
       $(function(){
           $yobi.loadModule("issue.List");
