--- a/app/views/issue/my_partial_search.scala.html
+++ b/app/views/issue/my_partial_search.scala.html
@@ -66,6 +66,7 @@
             </li>
         }
             <li>@common.twoColumnModeCheckboxArea()</li>
+            <li class="show-subtasks-li">@common.showSubtasksCheckbox()</li>
         </ul>
         @if(!currentPage.getList.isEmpty){
             <div class="filter-wrap small-heights">
