--- a/app/views/issue/partial_list_wrap.scala.html
+++ b/app/views/issue/partial_list_wrap.scala.html
@@ -55,6 +55,7 @@
             </li>
         }
             <li>@common.twoColumnModeCheckboxArea()</li>
+            <li class="show-subtasks-li">@common.showSubtasksCheckbox()</li>
         </ul>
 
         @if(currentPage.getList.isEmpty){
