subtask: Change subtask list text color and number min-width

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7128,7 +7128,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 }
 
 .child-issue-list {
-    color: #333;
+    color: #666;
 
     .closed {
         background-color: transparent !important;
@@ -7452,10 +7452,11 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 }
 
 .subtask-number {
-    color: darkgrey;
     font-size: 12px;
     margin-right: 5px;
     font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+    display: inline-block;
+    min-width: 22px;
 }
 
 .to-branch {
