css: Add new default projecg bg image

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -583,6 +583,7 @@
 
 .page-wrap-outer {
     min-height: 450px;
+    margin-top: 10px;
 }
 
 .page-wrap {
@@ -711,7 +712,7 @@
         margin:0 auto;
 
         h3 {
-            padding:15px 0 14px;
+            padding: 10px 10px 5px 10px;
             line-height: 30px;
         }
     }
@@ -5177,7 +5178,7 @@ label.issue-item-row {
 
 // -- site admin
 .site-setting-wrap {
-    margin:20px auto 0;
+    margin:0 auto;
 
     .site-setting-nav {
         list-style: none;
