message: Extract to message file

--- a/app/views/common/showSubtasksCheckbox.scala.html
+++ b/app/views/common/showSubtasksCheckbox.scala.html
@@ -6,7 +6,7 @@
 **@
 @(requireLeftMargin: Boolean = true)
 
-<div class="show-subtasks mr10" id="two-column-mode-checkbox" title='@Messages("common.two.column.mode")' data-content='@Messages("common.show.subtasks.desc")'>
+<div class="show-subtasks mr10" id="two-column-mode-checkbox" data-toggle="popover"  data-trigger="hover" data-placement="top" title='@Messages("common.show.subtasks")' data-content='@Messages("common.show.subtasks.desc")'>
     <label class="checkbox">
         <div class="show-subtasks-button-border">
             <input id="toggle-show-subtasks" type="checkbox"><span class="show-subtasks-text">@Messages("common.show.subtasks")</span>
