checklist: Remove bullet and fix bug derrived from recent patch

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7665,3 +7665,12 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         vertical-align: middle;
     }
 }
+
+/* task list */
+.task-list-item {
+    list-style: none;
+}
+.task-list-item-checkbox {
+    margin: 0 .2em .25em -1.6em;
+    vertical-align: middle;
+}
