checklist: Make checklist button more noticeable

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7564,6 +7564,10 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 .task-list-button {
     margin-top: 2px;
 
+    .tasklist-icon {
+        vertical-align: top;
+    }
+
     button {
         margin-top: 1px;
     }
