--- a/app/assets/stylesheets/less/_temporary.less
+++ b/app/assets/stylesheets/less/_temporary.less
@@ -39,7 +39,7 @@
 
         &.active {
             color: #fff;
-            background: @secondary;
+            background: #ff5722;
             font-weight:bold;
             overflow: auto;
             .border-radius (6px);
