--- a/app/views/common/navbar.scala.html
+++ b/app/views/common/navbar.scala.html
@@ -108,6 +108,7 @@
                     </div>
                 </form>
             </li>
+            <li><a data-toggle="popover" data-trigger="hover" data-placement="bottom" title="@Messages("april.fools.day")" data-content="@Messages("april.fools.desc")">⭐@Messages("april.fools.day")⭐</a></li>
         </ul>
         @common.usermenu()
     </div>
