--- a/app/views/common/scripts.scala.html
+++ b/app/views/common/scripts.scala.html
@@ -47,6 +47,7 @@
 <script type="text/javascript" src="@routes.Assets.at("javascripts/yona-lib.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/autosize/autosize.min.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/common/yona.KeyControl.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yona.springfools.js")"></script>
 
 <script type="text/javascript">
     $yobi.setScriptPath("@getJSPath");
