Revert "april-fools: 2019 april fools day theme"
This reverts commit 12388f423bf4c2441e2456a196742748039d30da.

--- a/app/assets/stylesheets/less/_temporary.less
+++ b/app/assets/stylesheets/less/_temporary.less
@@ -39,7 +39,7 @@
 
         &.active {
             color: #fff;
-            background: #ff5722;
+            background: @secondary;
             font-weight:bold;
             overflow: auto;
             .border-radius (6px);
