--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -719,7 +719,6 @@
 }
 
 .page-footer-outer {
-    margin-top:50px;
     background-color:@yobi-white;
     padding:10px 0;
 
@@ -7386,7 +7385,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 
 .my-issues {
     .post-item {
-        padding: 2px 10px;
+        padding: 0 10px;
         color: #999999;
       
         .title-wrap {
