support: Change main supportor to NAVER CLOUD PLATFORM

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -774,6 +774,14 @@
                 color:#fff;
             }
         }
+
+        .naver-cloud-platform {
+            &:hover {
+                color: white;
+                background-color: #1E49B9;
+                text-decoration: none;
+            }
+        }
     }
 }
 
