support: Add referer to sponsor link

--- a/app/views/common/footer.scala.html
+++ b/app/views/common/footer.scala.html
@@ -6,6 +6,9 @@
 **@
 <footer class="page-footer-outer">
     <div class="page-footer">
-        <span class="provider">Copyright <a href="https://github.com/yona-projects/yona/blob/master/AUTHORS" target="_blank" class="yona-author">Yona authors</a> & © <a href="https://navercorp.com/" target="_blank">NAVER Corp.</a> & <a href="https://naverlabs.com/" target="_blank" class="naver-labs">NAVER LABS</a> Supported by <a href="https://www.ncloud.com" target="_blank" class="naver-cloud-platform">NAVER CLOUD PLATFORM</span><span class="program"></span></a></span>
+        <span class="provider">Copyright <a href="https://github.com/yona-projects/yona/blob/master/AUTHORS" target="_blank" class="yona-author">Yona authors</a>
+            & © <a href="https://navercorp.com" target="_blank">NAVER Corp.</a>
+            & <a href="https://naverlabs.com/" target="_blank" class="naver-labs">NAVER LABS</a>
+            Supported by <a href="https://www.ncloud.com/?referer=yona" target="_blank" class="naver-cloud-platform">NAVER CLOUD PLATFORM</a></span>
     </div>
 </footer>
