--- a/app/views/issue/partial_view_child.scala.html
+++ b/app/views/issue/partial_view_child.scala.html
@@ -8,7 +8,7 @@
 
 <div class="issue-item @if(childIssue.id == parentIssue.id){selected-child}">
     <span class="state-label @state">@if(state == "closed"){<i class=" yobicon-checkmark">}</i></span>
-    <a href="@routes.IssueApp.issue(childIssue.project.owner, childIssue.project.name, childIssue.getNumber)">
+    <a class="title" href="@routes.IssueApp.issue(childIssue.project.owner, childIssue.project.name, childIssue.getNumber)">
         <span class="item-name"><span class="subtask-number">#@childIssue.getNumber</span> @childIssue.title@if(childIssue.assignee != null) { - @childIssue.assignee.user.getPureNameOnly}</span></a>
     <span class="font12 no-border-at-child">@common.commentAndVoterPairDisplay(childIssue, parentIssue.project)</span>
     @for(label <- childIssue.labels.toList.sortBy(r => (r.category.name, r.name))) {
