comment: Show people whom to receive notification

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7701,3 +7701,43 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     margin: 0 .2em .25em -1.6em;
     vertical-align: middle;
 }
+
+.child-comment-input-form {
+    .notification-receiver {
+        margin-left: 12px;
+        border-bottom-left-radius: 3px;
+        border-bottom-right-radius: 3px;
+    }
+}
+
+.notification-receiver {
+    background-color: #F7F7F7;
+    display: none;
+    text-align: start;
+    padding: 5px 5px 5px 10px;
+
+    .notification-receiver-title {
+        color: #999;
+    }
+
+    .notification-receiver-list {
+        span {
+            font-weight: bold;
+            -webkit-font-smoothing: antialiased;
+            -webkit-text-size-adjust: 100%;
+            -webkit-font-feature-settings: "kern" 1;
+            -moz-font-feature-settings: "kern" 1;
+            -o-font-feature-settings: "kern" 1;
+            font-feature-settings: "kern" 1;
+            font-kerning: normal;
+            border: 1px solid #4FC3F7;
+            border-radius: 3px;
+            margin-right: 3px;
+            padding-left: 2px;
+            padding-right: 2px;
+            background-color: #4FC3F7;
+            color: white;
+            font-size: 12px;
+        }
+    }
+}
