--- a/app/views/common/editor.scala.html
+++ b/app/views/common/editor.scala.html
@@ -53,6 +53,10 @@
         <div id="preview-@wrapId" class="tab-pane">
             <div class="markdown-preview markdown-wrap @editorMode" data-via-email="@viaEmail"></div>
         </div>
+        <div class="notification-receiver">
+            <span class="notification-receiver-title">@Messages("notification.receiver.list.title")</span>
+            <span class="notification-receiver-list"></span>
+        </div>
     </div>
 </div>
 }
