--- a/app/views/common/child_commentForm.scala.html
+++ b/app/views/common/child_commentForm.scala.html
@@ -12,10 +12,14 @@
 
 @if(isResourceCreatable(UserApp.currentUser, container, resourceType)){
     <form id="child-comment-form" action="@action" method="post" enctype="multipart/form-data">
-        <input type="hidden" name="parentCommentId" value="@parentCommentId"/>
+        <input class="parentCommentId" type="hidden" name="parentCommentId" value="@parentCommentId"/>
         <div class="oneline-comment-box">
             <textarea name="contents" markdown="true" id="editor-one-line-comment" rows="1" placeholder="@Messages("comment.oneline.comment.placeholder") (ENTER)"></textarea>
             <button type="submit" class="ybtn ybtn-success">OK</button>
+        </div>
+        <div class="notification-receiver">
+            <span class="notification-receiver-title">@Messages("notification.receiver.list.title")</span>
+            <span class="notification-receiver-list"></span>
         </div>
     </form>
 } else {
