editor: Support html5 video player

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7741,3 +7741,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         }
     }
 }
+
+.video-content {
+    max-height: 50vh;
+}
