--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -460,6 +460,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="@routes.IssueLabelApp.labelStyles(project.owner, project.name)">
 <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.css")">
 <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("javascripts/lib/elevator/jquery.elevator.css")">
+<link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("javascripts/lib/videojs/video-js.min.css")">
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.caret.min.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/elevator/jquery.elevator.js")"></script>
@@ -470,6 +471,7 @@
 <script type="text/javascript" src="@routes.Assets.at("javascripts/common/yona.SubComment.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/common/yona.CommentAttachmentsUpdate.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/common/yona.ReceiverList.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/videojs/video.min.js")"></script>
 <script type="text/javascript">
     $(function(){
         // yobi.issue.View
