--- a/app/views/common/editor.scala.html
+++ b/app/views/common/editor.scala.html
@@ -45,7 +45,7 @@
 
         <div id="edit-@wrapId" class="tab-pane active">
             <div class="textarea-box">
-                <textarea name="@textareaName" class="content comment nm" data-editor-mode="@editorMode" markdown="true" id="editor-@textareaName-@wrapId"
+                <textarea name="@textareaName" class="editorSeries content comment nm" data-editor-mode="@editorMode" markdown="true" id="editor-@textareaName-@wrapId"
                     @additionalAttr>@textValue</textarea>
             </div>
         </div>
