issue: Detect issue view page change

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7798,3 +7798,12 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         text-decoration: none;
     }
 }
+
+.reload-page-link {
+    color: #388e3c;
+    text-decoration: underline;
+
+    &:hover {
+        color: white;
+    }
+}
